--- a/gb/25/11/8/n14632047.md
+++ b/gb/25/11/8/n14632047.md
@@ -40,12 +40,12 @@
 <p>在房产盛会中，虽然谈论的是房地产，却看见了更多。看见资讯混杂的时代里，人们仍追求真实、价值与信任；看见新酒店从钢筋变成机会，滑雪木屋从梦想变成家庭的未来；看见面包师后代如何承接上一代的手艺。这些充满特色的展位提醒着大家，房子不只是投资品，更是人要生活的地方。正如房地产博览会总监Anthony Kazazis说的：“人脉拓展与相互连结，是我们多年来的主题。”◇</p>
 <p>责任编辑：甄真</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
