--- a/gb/25/11/1/n14627477.md
+++ b/gb/25/11/1/n14627477.md
@@ -2,13 +2,11 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【车评】融合效率与格调 2026 Toyota Prius Plug-in Hybrid</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/11/id14627515-2026_Toyota_Prius_Prime_XSE_01-600x400.jpg" />///image2=```diff
-- 2026 Toyota Prius Plug-in Hybrid。（李奥／大纪元）
-```
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/11/id14627515-2026_Toyota_Prius_Prime_XSE_01-600x400.jpg" />
 <h6>2026 Toyota Prius Plug-in Hybrid。（李奥／大纪元）</h6>
 <hr>
 <p>【大纪元2025年11月01日讯】在2026年的混动车市场，Toyota Prius Plug-in Hybrid（简称PHEV）以其前卫设计、卓越效率和令人惊喜的驾驶体验，继续引领潮流。作为第五代Prius的最新力作，它不仅继承了品牌的环保基因，还融入了现代感和实用性，起售价约$37,500（包括目的地费）。</p>
-<p><a loading="lazy" title="YouTube video player" data2-src=""></a><a href="https://dvsmtoxipy5i5.cloudfront.net/R2pBOKKQEahn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/0zGiYF-bX5o?si=YbjOFkVsu_6zGz_B" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a loading="lazy" title="YouTube video player" data2-src=""></a><a href="https://dlph7fabhsbfp.cloudfront.net/Z8vBOKKQEahl"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/0zGiYF-bX5o?si=YbjOFkVsu_6zGz_B" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>特别版如Nightshade Edition为追求个性的用户提供独特选择，但核心魅力仍在于这款车本身的出色表现。如果你想要一辆兼顾省油、舒适和科技的日常座驾，2026 Prius PHEV无疑是首选。</p>
 <figure id="attachment_14627478" aria-describedby="caption-attachment-14627478" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/11/id14627478-2026_Toyota_Prius_Prime_XSE_05.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14627478" src="https://i.epochtimes.com/assets/uploads/2025/11/id14627478-2026_Toyota_Prius_Prime_XSE_05-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14627478" class="wp-caption-text">2026 Toyota Prius Plug-in Hybrid。（李奥／大纪元）</figcaption></figure>
 <p>第五代Prius以流线型车身和锐利线条重新定义了混动车的外观，彻底摆脱了“环保车=乏味”的刻板印象。由于转向半径小，停车和掉头轻松自如。空气动力学系数低至0.24Cd，不仅提升燃油效率，还赋予车辆优雅姿态。</p>
@@ -44,12 +42,12 @@
 <figure id="attachment_14627514" aria-describedby="caption-attachment-14627514" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/11/id14627514-2026_Toyota_Prius_Prime_XSE_11.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14627514" src="https://i.epochtimes.com/assets/uploads/2025/11/id14627514-2026_Toyota_Prius_Prime_XSE_11-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14627514" class="wp-caption-text">Nightshade Edition的黑色侧镜。（李奥／大纪元）</figcaption></figure>
 <p>责任编辑：钟义云</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
